version/0.12/_sources/api/solver/_autosummary/settings/display_states.rst.txt
:orphan:

.. _display_states:

display_states
==============

.. currentmodule:: ansys.fluent.core.solver.settings_231.display_states

.. autoclass:: display_states
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

====================================   ===================================================================================

Command                                                                                                            Summary

====================================   ===================================================================================
:ref:`list <list>`                                                                                         'list' command.

:ref:`use_active <use_active>`                                                                       'use_active' command.

:ref:`restore_state <restore_state>`                                           Apply a display state to the active window.

:ref:`copy <copy_4>`                       Create a new display state with settings copied from an existing display state.

:ref:`read <read_3>`                                                                      Read display states from a file.

:ref:`write <write_1>`                                                                     Write display states to a file.

====================================   ===================================================================================

.. rubric:: Named object type

:ref:`display_states_child <display_states_child>`


.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`views <views>`       'views' child.

====================   ==================

